# src/apps/prism-neuro-backend/backend/routes/file/file.routes.ts
@@ -5,9 +5,14 @@ import { imageUpload } from '../admin/admin-physio.routes';
 
 interface IHandler {
   uploadModeFilesController: controller.UploadModeFilesController;
+  getModeFilesController: controller.GetModeFilesController;
 }
 
-export const fileRoutesHandler = ({ uploadModeFilesController }: IHandler, adminAuthorizer: JWTAdminAuthorizer, router: Router): Router => {
+export const fileRoutesHandler = (
+  { uploadModeFilesController, getModeFilesController }: IHandler,
+  adminAuthorizer: JWTAdminAuthorizer,
+  router: Router
+): Router => {
   router.post(
     '/admin/upload-files',
     // adminAuthorizer.authorize,
@@ -37,6 +42,33 @@ export const fileRoutesHandler = ({ uploadModeFilesController }: IHandler, admin
     }
  
      */
+  );
+
+  router.get(
+    '/admin/files/',
+    getModeFilesController.invoke.bind(getModeFilesController)
+    /* 
+    #swagger.tags = ['File']
+    #swagger.summary = "Get files"
+     #swagger.parameters['type'] = {
+    in:"query",
+    type:"string",
+    required:"true",
+    schema:{
+    '@enum':["LEFT_RIGHT_MODE","VISUAL_BALANCE_MODE"]
+    }
+    }
+    #swagger.parameters['isLeftMode'] = {
+    in:"query",
+    type:"boolean",
+    }
+    #swagger.parameters['isRightMode'] = {
+    in:"query",
+    type:"boolean",
+
+    }
+
+    */
   );
   return router;
 };
